CSS/style.css
/* Base styles */

* {
	box-sizing: border-box;
}

body {
  margin: 0;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  }

.header {
  background-color: grey; 
  /* height: 100px;
  width: 100%; */
}

.main-header 
{
  background-color: #000;
}

#navbarNav {
  width: 30px;
  background-position: 100% .4em;
  padding-right: .6em; 
  justify-content: flex-end;
 }

 ul li {
   text-transform: uppercase;
   padding: 10px;
 }

a {
  display: inline;
  padding: 10px 15px;
  color: black;
}

.navbar-light .navbar-nav .nav-link {
  color: black;
}

a:link {
  text-decoration: none;
}

a:hover {
  color: grey;
}

.active, .nav-link a:hover {
  background-color: #f1f1f1;
  border-radius: 30px;
  padding: 5px;
}

.mb-4 {
  text-align: center;
}

.mb-4:hover {
  opacity: 0.5; 
}

.container-pt-4 {
  background-color: #f2f2f2; 
}

/* Styling a footer */

  footer {
    background-color: #222629;
  }

.footer_links {
  list-style-type: none;
  margin-top: 0;  
  padding-top: 10px;
  padding-right: 10px;
  padding-bottom: 10px;
  padding-left: 6px;
  margin-bottom: 0;
  line-height: .3em;
}

.footer-container {
  justify-content: center;
}

.footer-column {
  padding: 10px;
}

.copyright {
  padding: 10px;
  color: white;
  text-align: center;
}

.follow_us {
  text-align: center;
  padding-top: 10px;
}

 .fab {
  color: white;
  text-shadow: 1px 1px 1px #ccc;
  font-size: 1em; 
  text-align: center;
}

.fab:hover {
  opacity: .5;
  font-size: 2em;
  transition: 1s ease-out;  
}

 /* Media Queries */
 
@media screen and (max-width: 800px) {
  a {
    width: 100%;
  }
}


 /* Styling Contac Us Form  */

 /* Style inputs, select elements and textareas */
input[type=text], select, textarea{
  width: 100%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  resize: vertical;
}

/* Style the label to display next to the inputs */
label {
  padding: 12px 12px 12px 0;
  display: inline-block;
}

/* Style the submit button */
#contact-button {
  background-color: #007bff;
  color: white;
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  float: right;
  text-transform: uppercase;
}

/* Style the container */
.container-contact {
  border-radius: 5px;
  background-color: #f2f2f2;
  padding: 20px;
}

/* Floating column for labels: 25% width */
.col-25 {
  float: left;
  width: 25%;
  margin-top: 6px;
}

/* Floating column for inputs: 75% width */
.col-75 {
  float: left;
  width: 75%;
  margin-top: 6px;
}

/* Clear floats after the columns */
.row-contact:after {
  content: "";
  display: table;
  clear: both;
}

/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 540px) {
  .col-25, .col-75, input[type=submit] {
    width: 100%;
    margin-top: 0;
  }
}
   /* Styling About Us page */

.about-div {     
  background-color: #f2f2f2;
}

.about-picture {
  float: left;
  padding: 10px;
  border-radius: 10px;
}

.address-column {
  float: right;
  width: 30%;
  padding: 10px; 
}

h2 {
  text-align: center;
}

.history, .our-chief, .team { 
  padding-left: 30px;
  padding-right: 10px; 
  text-align: justify;
}


.team-column {
  padding: 10px;
}

@media screen and (max-width: 650px) {
  .chief-column {
    width: 100%;
    display: block;
  }
}

.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

.container {
  padding: 0 16px;
}

.container::after, .row::after {
  content: "";
  clear: both;
  display: table;
}

.title {
  color: grey;
}

.button {
  border: none;
  outline: 0;
  display: inline-block;
  padding: 8px;
  color: white;
  background-color: #000;
  text-align: center;
  cursor: pointer;
 
}

.button:hover {
  background-color: #555;
}

/* Clear floats after the columns */
.about-row:after {
    content: "";
    display: table;
    clear: both;
}

/* Styling APPLY FORM */
.modal-body {
  background-color: #f2f2f2;
}

   /* Styling Carousel Page */
  
  /* Position the image container (needed to position the left and right arrows) */
  .gallery-container {
    position: relative;
    width: 40%;
    margin-left: auto;
    margin-right: auto;
  }
  
  /* Hide the images by default */
  .mySlides {
    display: none;
  }
  
  /* Add a pointer when hovering over the thumbnail images */
  .cursor {
    cursor: pointer;
  }
  
  /* Next & previous buttons */
  .prev,
  .next {
    cursor: pointer;
    position: absolute;
    top: 40%;
    width: auto;
    padding: 16px;
    margin-top: -50px;
    color: white;
    font-weight: bold;
    font-size: 20px;
    border-radius: 0 3px 3px 0;
    user-select: none;
    -webkit-user-select: none;
  }
  
  /* Position the "next button" to the right */
  .next {
    right: 0;
    border-radius: 3px 0 0 3px;
  }
  
  /* On hover, add a black background color with a little bit see-through */
  .prev:hover,
  .next:hover {
    background-color: rgba(0, 0, 0, 0.507);
  }
  
  /* Number text (1/3 etc) */
  .numbertext {
    color: black;
    font-size: 15px;
    padding: 8px 12px;
    position: absolute;
    top: 0;
  }
  
  /* Container for image text */
  .caption-container {
    text-align: center;
    background-color: #222;
    padding: 2px 16px;
    color: white;
  }
  
  .gallery-row:after {
    content: "";
    display: table;
    clear: both;
  }
  
  /* Six columns side by side */
  .gallery-column {
    float: left;
    width: 16.66%;
  }
  
  /* Add a transparency effect for thumnbail images */
  .demo {
    opacity: 0.6;
  }
  
  .active,
  .demo:hover {
    opacity: 1;
  }
 


   /* Flexbox */



   .row {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     padding: 10px;
   }

   .column {
      flex-basis: auto;
      flex-grow: 1;
      max-width: 40%;
      padding: 10px;
      margin: 5px;
      border: 1px solid lightgray;
      border-radius: .3em;
   }

    @media screen and (max-width: 540px) {
    .row {
      display: flex;
      flex-direction: column;
      flex-wrap: wrap;
    }

    .column {
      max-width: 100%;
      width: 100%;
    }

    .footer-column {
      display: block;
      flex-direction: column;
      width: 100%;
    }

    .header {
      background-color: lightblue;
    }

    .address-column {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;

    }
}

